--- a/android/app/src/main/res/layout/radio_group.xml
+++ b/android/app/src/main/res/layout/radio_group.xml
@@ -1,28 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:gravity="center"
-    android:orientation="vertical">
 
-    <RadioGroup
-        android:id="@+id/radioGroup"
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <data>
+
+        <variable
+            name="viewModel"
+            type="com.example.vena67.myapplication.MainViewModel" />
+    </data>
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:gravity="center"
+        android:orientation="vertical">
 
-        <RadioButton
-            android:id="@+id/onDeviceRadio"
-            android:layout_width="wrap_content"
+        <RadioGroup
+            android:id="@+id/radioGroup"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="OnDevice Model" />
+            android:orientation="horizontal">
 
-        <RadioButton
-            android:id="@+id/cloudRadio"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Cloud model" />
+            <RadioButton
+                android:id="@+id/onDeviceRadio"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="OnDevice Model" />
 
-    </RadioGroup>
+            <RadioButton
+                android:id="@+id/cloudRadio"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Cloud model" />
 
-</LinearLayout>
+        </RadioGroup>
+
+    </LinearLayout>
+</layout>
